Fix chart resizing on small devices

--- a/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/footer.css
+++ b/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/footer.css
@@ -4,6 +4,7 @@
 }
 
 footer {
+    padding-left:4rem;
     width: 100%;
     background-color: #263238;
     min-height: 250px;
@@ -117,3 +118,13 @@ footer p {
             height: 20px;
             text-align: center;
         }
+
+@media (min-width: 480px) {
+    .small-footer {
+        padding: 0;
+        margin: 0;
+    }
+    footer{
+        height:30rem;
+    }
+}
