--- a/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
+++ b/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
@@ -148,16 +148,16 @@ img {
 }
 
 .footer.learn-container {
-    height: 20rem;
-    max-height: 20rem;
+    height: 30rem;
+    max-height: 30rem;
 }
 
 .btn-circle {
-    width: 30px;
-    height: 30px;
+    width: 3rem;
+    height: 3rem;
     text-align: center;
     padding: 6px 0;
-    font-size: 12px;
+    font-size: 1rem;
     line-height: 1.428571429;
     border-radius: 15px;
 }
